java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests-eks/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app
  labels:
    app: spring-boot-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: spring-boot-app
  template:
    metadata:
      labels:
        app: spring-boot-app
    spec:
      containers:
      - name: spring-boot-app
        image: 692542154051.dkr.ecr.ap-south-1.amazonaws.com/spring-boot-web-app:latest
        ports:
        - containerPort: 8080
